resources/insights-stage/3scale-stage/api-gateway-stage.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: 3scale-gateway
  name: api-gateway-stage
spec:
  host: api-gateway-stage.apps.crcs02ue1.urby.p1.openshiftapps.com
  port:
    targetPort: 9092
  tls:
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIDsjCCApqgAwIBAgIBBjANBgkqhkiG9w0BAQsFADBOMRAwDgYDVQQKDAdSZWQg
[...]
      fQEw+cWRxwFPJujSOTSKRHZDo1UwOIQbxqkbznSHlLCICEXxuvQ=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIID6DCCAtCgAwIBAgIBFDANBgkqhkiG9w0BAQsFADCBpTELMAkGA1UEBhMCVVMx
[...]
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIENDCCAxygAwIBAgIJANunI0D662cnMA0GCSqGSIb3DQEBCwUAMIGlMQswCQYD
[...]
      RxNEp7yHoXcwn+fXna+t5JWh1gxUZty3
      -----END CERTIFICATE-----
    termination: reencrypt
  to:
    kind: Service
    name: apicast
    weight: 100
  wildcardPolicy: None
